# Muve

./: Aplication.cpp  CMakeLists.txt  NoiseMaker.h  NoteGenarator.h  OldNoiseMaker.cpp  README.md  SessionEvaluator.h  SocketServer.cpp  SocketServer.h  SoundSynthesizer.cpp  SoundSynthesizer.sln  SoundSynthesizer.vcxproj  SoundSynthesizer.vcxproj.filters  StateMachine.cpp  StateMachine.h  SynthUtils.h
MovementTracker/: MovementTracker.ino
